--- a/doc/design-decisions.org
+++ b/doc/design-decisions.org
@@ -7,7 +7,7 @@ correctly, listed in no particular order. These should be documented in an obvio
 
 The ASDF system and CL package name must be the same. A keyword symbol representing the ASDF system
 name, must be the same keyword symbol used to represent the package. In our example, the symbol
-=:first-light-example= is both a system and package designator, thus it is legal.
+=:fl.example= is both a system and package designator, thus it is legal.
 
 ** User extension location
 
