Recomputed 3D texture mipmaps by hand.

--- a/projects/example/data/texture/3d/testpat/README
+++ b/projects/example/data/texture/3d/testpat/README
@@ -7,4 +7,4 @@ Red from left to right.
 
 The various other colors are there for examination of rendering.
 
-The mipmaps are generated with the script in tis directory.
+The mipmaps are generated laboriously by hand. It sucks.
