--- a/doc/actor-life-cycle.org
+++ b/doc/actor-life-cycle.org
@@ -1,11 +1,13 @@
 * Actor Life Cycle
 
-From the =core.flow= point of view. This is the state machine for Actors in terms of flow-states.
+From the =core.flow= point of view. This is the state machine for Actors in
+terms of flow-states.
 
-*NOTE:* This sequence of flow states is a subset of the entire =core.flow= state machine. So for
-example, the =protocol-update-component= flow-state is missing in this state transition. In the
-=protocol-update-component=, which represents one of the points of game code execution in a project,
-new actors can arise via =spawn-actor= or current actors may be =destroy='ed.
+*NOTE:* This sequence of flow states is a subset of the entire =core.flow= state
+machine. So for example, the =protocol-update-component= flow-state is missing
+in this state transition. In the =protocol-update-component=, which represents
+one of the points of game code execution in a project, new actors can arise via
+=spawn-actor= or current actors may be =destroy='ed.
 
 #+BEGIN_SRC
 [FRAME-START] ->
@@ -15,9 +17,9 @@ disconnect-destroyed-actors -> release-actors ->
 [FRAME-END]
 #+END_SRC
 
-The above flow-states call an API in the =src/engine/actor.lisp= file that performs the above book
-keeping. Here is the correspondence between the flow-state described above and the API functions
-called:
+The above flow-states call an API in the =src/engine/actor.lisp= file that
+performs the above book keeping. Here is the correspondence between the
+flow-state described above and the API functions called:
 
 | flow-state                    | Actor API Function             |
 |-------------------------------+--------------------------------|
@@ -29,11 +31,12 @@ called:
 | disconnect-destroyed-actors   | actor/disconnect               |
 | release-actors                | actor/destroy->released        |
 
-Now, in the =bookkeeping-tables= defclass found in =core-state.lisp=, we define some hash table slots to
-represent the actual places where actors are kept. For each hash table, the key is an actor
-instance-ref, and the value is the same actor instance-ref. We do this to make additions and
-deletions amortize to O(1). Using lists here would cause a severe performance drop in order to
-perform the list search.
+Now, in the =bookkeeping-tables= defclass found in =core.lisp=, we define some
+hash table slots to represent the actual places where actors are kept. For each
+hash table, the key is an actor instance-ref, and the value is the same actor
+instance-ref. We do this to make additions and deletions amortize to O(1). Using
+lists here would cause a severe performance drop in order to perform the list
+search.
 
 #+BEGIN_SRC lisp
 ;; ...
@@ -50,17 +53,19 @@ perform the list search.
 ;; ...
 #+END_SRC
 
-Note that by convention =*-view= means a data structure that *does not own* the values in it, but
-instead have a view of them in other data structures. A =*-db= data structure actually *owns* the
-instances in them. So, to be clear, if an actor's instance is in =actor-predestroy-view=, that means
-it is a reference to an instance owned by another =*-db= hash table, in this case =actor-preinit-db= _or_
-=actor-active-db=.
+Note that by convention =*-view= means a data structure that *does not own* the
+values in it, but instead have a view of them in other data structures. A =*-db=
+data structure actually *owns* the instances in them. So, to be clear, if an
+actor's instance is in =actor-predestroy-view=, that means it is a reference to
+an instance owned by another =*-db= hash table, in this case =actor-preinit-db=
+_or_ =actor-active-db=.
 
-These slots represent the storage location for actor instances as they move through their life
-cycle.
+These slots represent the storage location for actor instances as they move
+through their life cycle.
 
-Let's describe what each API function does with the above tables. In addition, we will add two more
-API calls the user may use during the execution of the component-protocol:
+Let's describe what each API function does with the above tables. In addition,
+we will add two more API calls the user may use during the execution of the
+component-protocol:
 
 ** spawn-actor
   - The state of the actor should be =:initialize=.
@@ -83,13 +88,15 @@ API calls the user may use during the execution of the component-protocol:
   - Add actor to =actor-destroy-db=.
   - Mark the actor's state as =:destroy=.
   - Remove actor from =actor-predestroy-view=.
-  - If unable to remove actor from =actor-active-db=, then remove from =actor-preinit-db=.
-  - Any components in this destroying actor are moved in their specific state machine to their
-    equivalent destroy state.
+  - If unable to remove actor from =actor-active-db=, then remove from
+    =actor-preinit-db=.
+  - Any components in this destroying actor are moved in their specific state
+    machine to their equivalent destroy state.
 
 ** actor/destroy-descendants
-  - Recurse down the children of the actor, set destruction timer to zero, then move from
-    =actor-active-db= or =actor-preinit-db= (as appropriate) to =actor-destroy-db=.
+  - Recurse down the children of the actor, set destruction timer to zero, then
+    move from =actor-active-db= or =actor-preinit-db= (as appropriate) to
+    =actor-destroy-db=.
 
 ** actor/countdown-to-destruction
   - Decrement the time to live for this actor by the frame time if appropriate.
@@ -98,8 +105,8 @@ API calls the user may use during the execution of the component-protocol:
   - Unhook the actor and all of its children from the scene tree.
 
 ** actor/destroy->released
-  - This function assumes that previously to this call, the components for this actor have all been
-    destroyed and released, leaving an empty actor.
+  - This function assumes that previously to this call, the components for this
+    actor have all been destroyed and released, leaving an empty actor.
   - Remove the actor from =actor-destroy-db=.
-  - At this point, FL has no more references to this actor. If the user's code also has no more
-    references, then the GC will eventually collect this actor.
+  - At this point, FL has no more references to this actor. If the user's code
+    also has no more references, then the GC will eventually collect this actor.
