--- a/support/README
+++ b/support/README
@@ -1,9 +1,16 @@
 These are generally entirely complete independent systems that have been
 brought into the Virality codebase to make packaging, evolution, debugging, and
 maintenance of Virality easier. This fundamentally forks them from their
-original repos and without the previous history.
+original repos and without the previous history. In order for these libraries
+to co-exist with version of the upstream libraries, system names and packages
+had to be changed.
 
 vorigin/
 	Derived from Michael Fiano's origin math library.
 	http://github.com/mfiano/origin.git 
 	master @ 5f143c0
+
+vutils/
+	Derived from Michael Fiano's mfiano-utils library.
+	http://github.com/mfiano/mfiano-utils.git 
+	master @ 65df8d4
